# fastapi-onion-architecture

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.development.yaml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_04_1830-be57e4bd3c7e_initial.py  2024_08_17_0035-874c6793c6b5_initial.py  2024_08_17_1154-bb75bee984e9_initial.py
dev_ops/: docker-compose.test.yaml
src/: __main__.py  config.py  main.py  metadata.py
src/api/: __init__.py
src/api/v1/routers/: __init__.py  company.py  user.py
src/api/v1/services/: __init__.py  company.py  user.py
src/database/: __init__.py  db.py
src/models/: __init__.py  base.py  company.py  user.py
src/models/mixins/: __init__.py  company_mixin.py  custom_types.py
src/repositories/: __init__.py  company.py  user.py
src/schemas/: company.py  filter.py  response.py  user.py  wrapper.py
src/services/: __init__.py  user.py
src/utils/: constans.py  custom_types.py  repository.py  service.py  unit_of_work.py
tests/: conftest.py  constants.py  utils.py
tests/fakes/: __init__.py  fake_params.py  users.py
tests/fixtures/: __init__.py  test_cases.py
tests/fixtures/db_mocks/: __init__.py  users.py
tests/fixtures/postgres/: __init__.py  companies.py
tests/fixtures/testing_cases/: __init__.py  company_router.py  repository.py  service.py  user_router.py
tests/integration/api/v1/routers/: test_company_router.py
tests/integration/utils/: test_service.py
tests/unit/: conftest.py
tests/unit/api/v1/routers/: test_company_router.py  test_user_router.py  test_user_router_v1.py
tests/unit/utils/: test_repository.py  test_service.py  test_unit_of_work.py
